--- a/catalogo_muebles/render.yaml
+++ b/catalogo_muebles/render.yaml
@@ -2,7 +2,7 @@ databases:
   - name: mueblesemae
     plan: free
     databaseName: mueblesemae
-    user: postgres
+    user: mueblesemae
 
 services:
   - type: web
@@ -10,7 +10,8 @@ services:
     name: mueblesemae
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn mueblesemae.asgi:application -k uvicorn.workers.UvicornWorker"    envVars:
+    startCommand: "python -m gunicorn mueblesemae.asgi:application -k uvicorn.workers.UvicornWorker"    
+    envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: mueblesemae
